docs(warm): (WARM.31) — session note, STATUS bump, and the queue entry closed with its threshold
Round 904's product is a refusal that closes a whole family, so what has to
survive is the threshold rather than the verdict: a LongKeyMap/IntKeyMap probe is
~2 ns (confirmed twice now, rounds 903 and 904), a boxed HashMap<Long,·> probe is
8.53 ns, and a site therefore needs ~1.7 M operations per rebuild to clear the
~17 ms floor. The whole check spine visits 856,962 nodes. That single comparison
refuses every per-node memo in the compiler before anyone builds anything, and it
is the reusable part — the queue entry now carries it so a future boxed-key site
can be refused for free, by multiplying its population by 6.58 ns.

Two findings reach back into the instrument rather than the candidate.

A single-r A-B over-reads an amplified premium by up to 23%. The standing advice
is that the timestamp boundary cancels between the arms at equal r; it does not,
because the arms' boundaries are not equal — 88.0 against 76.1 ns here — so the
difference read 8.07 at r=8 and 7.07 at r=24 against a true 6.58. Fitting per arm
and differencing the costs makes the two implied boundaries a free check on the
fit. Round 903's arms were already slopes at two r, so its premium and its
refusal are unaffected; it is the two rounds together that make this a law.

And leaf instability is per-mechanism, not per-row. Round 868's law is always
quoted about a single frame. Run over round 899's own two dumps — same binary,
same round — the boxed-primitive leaf family reads 72.9 ms and 19.0 ms, because
C2 inlined Integer.equals into its callers in one process and not the other. The
29.4 ms that put this family on the candidate list was one draw of a number with
a 4x spread. Any aggregation that sums inlinable stdlib leaves inherits that at
family scale, so a family share needs two processes minimum.

Housekeeping under the trim-on-write rule: rounds 892 and 893 move to
docs/history/PLAN-PHASE-5-HISTORY